Fix styling of post keywords on index, sadly they can't be linked since it breaks the markup as the parent (post) is also a link.

--- a/new/static/styles/global.css
+++ b/new/static/styles/global.css
@@ -86,7 +86,6 @@ div.content a.post:hover {
 }
 
 div.content a.post:hover .title {
-    text-decoration: underline;
     color: var(--highlight);
 }
 
